# rust

./: .gitmodules  download_audios.py
axum/testing/: Cargo.toml
axum/testing/src/: main.rs
learning/cryptography/: Cargo.toml
learning/cryptography/src/: cryptography.rs  main.rs
learning/enums-modules/: Cargo.toml
learning/enums-modules/src/: main.rs  states.rs  transitions.rs
learning/module-test/src/: main.rs  mhm.rs  test.rs
learning/number_guessing/: Cargo.toml
learning/number_guessing/src/: main.rs
learning/ratatui/test/: Cargo.toml
learning/some_tui_tests/: Cargo.toml
learning/some_tui_tests/src/: main.rs
learning/todo-app/: Cargo.toml  data.json
learning/todo-app/src/: main.rs  todos.rs
projects/test-dioxus/: Cargo.toml  Dioxus.toml
projects/test-dioxus/src/: main.rs
projects/tetris/: Cargo.toml  Dioxus.toml
projects/tetris/src/: main.rs  main.rs~
random/src/: main.rs
tauri-gtd/: Cargo.toml  package-lock.json  tailwind.config.js
tauri-gtd/src/: app.rs
tauri-gtd/src-tauri/: Cargo.toml  tauri.conf.json
tauri-gtd/src-tauri/src/: main.rs
tauri-gtd/src/components/: route.rs
terminal-utilities/cat/: Cargo.toml
terminal-utilities/cat/src/: main.rs
terminal-utilities/echo/: Cargo.toml
terminal-utilities/echo/src/: main.rs
terminal-utilities/grep/: Cargo.toml
terminal-utilities/grep/src/: main.rs
terminal-utilities/ls/: Cargo.toml
terminal-utilities/ls/src/: main.rs
tetris/: Cargo.toml  Dioxus.toml
tetris/public/: tailwind.css
tetris/src/: main.rs
tokio/testing/: 7  Cargo.toml
tokio/testing/src/: main.rs
(+3 files in other folders)
